content/boomerang-flow/3.2.0/introduction/01.overview.md
---
title: Overview
index: 1
---

# Overview

Modernize and supercharge your workflow automation with a powerful cloud native event driven workflow automation tool built on top of Kubernetes<sup>®</sup>. It enables new ways of approaching your business tasks or combine with existing tools to extend your current workloads.

Supporting the no-code paradigm with out-of-the-box tasks, Boomerang Flow offers extensibility to bring your own tasks, while providing custom container support. 

Create your next workflow to produce an end-to-end process that executes a series of tasks based on a Directed Acyclic Graph (DAG).

> **Note**: Boomerang Flow is an open source project part of Boomerang-io.

## Benefits

* Cloud native from the ground up, with no overhead from legacy implementations.
* Cloud agnostic and can be run in any Kubernetes environment.
* A visual editor provides for creating the Directed Acyclic Graph (DAG).
* Supports events based on [CloudEvents](https://cloudevents.io) and [NATS](https://nats.io).
* Workflows can be triggered in any of four easy methods: manual, webhook, schedule, or custom event.
* The multi-step workflows support parallel processing, decisions, dynamic storage, and parameterization. 
* Tasks are executed as Kubernetes jobs
* Workflow change logs and versioning provide the ability to roll back to any prior revision.
* Activity detail with per-execution records detail the executed workflow and tasks. Logs, status, and output properties are also available.
* Dynamic insights over time can be filtered per team, workflow or a combination thereof.

## Directed Acyclic Graph (DAG)

- Steps in a DAG are a task.
- Tasks are a discrete piece of work.
- All of the tasks in DAG make up a workflow.

## Navigation

* Workflows - Create, view, and manage your workflows from a centralized location. 
* Activity - View the status, logs, outputs, and run times of your recent workflow executions.
* Editor - Use the advanced visual drag-and-drop workflow Editor to define triggers, set options, create properties, and link the workflow tasks together.
* Insights - View powerful metrics and real-time statistics on workflow executions over time, showing peak execution periods, average run times, and percentage of success and failures.

## Tasks

Tasks can be split into three distinct types. See [Getting To Know Tasks](/boomerang-flow/getting-to-know/tasks) for more information.

* System Tasks: are logic based tasks that influence the DAG.
* Template Tasks: are tasks that perform a function and can be verified out-of-the box, are community-provided, and managed through Task Manager (in the Admin interface).
* Custom Task: a custom task allows a bring-your-own container to run in place of a task and executes any custom logic.

## IBM Services Essentials

As Boomerang Flow was contributed to open source, and continues to be sponsored by IBM integration with IBM Services<sup>®</sup> Essentials. Flow is supported out-of-the box, providing additional enterprise capabilities such as audit logging, consent management, and user and team role management via the broader IBM platform. There are also tasks available that rely on platform services. 

At installation time, you can configure whether to run Boomerang Flow in standalone mode or integrated to IBM Services Essentials.